Get master groups
